tests/ui/consts/const-eval/format.stderr
error[E0015]: cannot call non-const formatting macro in constant functions
  --> $DIR/format.rs:2:13
   |
LL |     panic!("{:?}", 0);
   |     --------^^^^-----
   |     |
   |     in this macro invocation (#1)
   |     in this macro invocation (#2)
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this expansion of `panic!` (#1)
  --> $SRC_DIR/std/src/panic.rs:LL:COL
   |
   = note: in this expansion of `$crate::panic::panic_2015!` (#2)
  ::: $SRC_DIR/std/src/panic.rs:LL:COL
   |
   = note: in this macro invocation (#3)
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `$crate::const_format_args!` (#3)
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error[E0015]: cannot call non-const fn `Arguments::<'_>::new_v1` in constant functions
  --> $SRC_DIR/std/src/panic.rs:LL:COL
   |
   = note: in this expansion of `$crate::panic::panic_2015!` (#2)
  ::: $SRC_DIR/std/src/panic.rs:LL:COL
   |
   = note: in this macro invocation (#3)
   |
  ::: $DIR/format.rs:2:5
   |
LL |     panic!("{:?}", 0);
   |     -----------------
   |     |
   |     in this macro invocation (#1)
   |     in this macro invocation (#2)
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this expansion of `panic!` (#1)
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `$crate::const_format_args!` (#3)
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error[E0015]: cannot call non-const formatting macro in constant functions
  --> $DIR/format.rs:8:15
   |
LL |     println!("{:?}", 0);
   |     ----------^^^^----- in this macro invocation (#1)
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this expansion of `println!` (#1)
  ::: $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this macro invocation (#2)
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `$crate::format_args_nl!` (#2)
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error[E0015]: cannot call non-const fn `Arguments::<'_>::new_v1` in constant functions
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this expansion of `println!` (#1)
  ::: $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this macro invocation (#2)
   |
  ::: $DIR/format.rs:8:5
   |
LL |     println!("{:?}", 0);
   |     ------------------- in this macro invocation (#1)
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `$crate::format_args_nl!` (#2)
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error[E0015]: cannot call non-const fn `_print` in constant functions
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this expansion of `println!`
   |
  ::: $DIR/format.rs:8:5
   |
LL |     println!("{:?}", 0);
   |     ------------------- in this macro invocation
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0015`.
